Refactoring FE